tests/liquid/neg/arrays/arr-00.js

/*@ foo :: ([number]) => { number | true } */
function foo(a) {

  return a[0];

}
